# EDGV_FundamentosFinal

./: README.md
EDGV_FundamentosFinal/: CMakeLists.txt
EDGV_FundamentosFinal/Framework/: CMakeLists.txt
EDGV_FundamentosFinal/Framework/include/: frameworkManager.h
EDGV_FundamentosFinal/Framework/include/platform/: defines.h  dllDynamics.h  iofile.h  math.h  memoryManager.hpp  module.hpp  stdHeaders.h
EDGV_FundamentosFinal/Framework/include/platform/math/: matrix3.h
EDGV_FundamentosFinal/Framework/include/resources/: collider.h  material.h
EDGV_FundamentosFinal/Framework/include/scene/: actor.h  component.h  scene.h  sceneManager.h
EDGV_FundamentosFinal/Framework/include/scene/components/: button.h  canvas.h  circleCollider.h  collider.h  rectCollider.h  render.h  script.h  shapeCircle.h  shapeRect.h  transform.h  uiText.h
EDGV_FundamentosFinal/Framework/include/tools/: font.h  globals.h  input.h  math.h  texture.h  time.h
EDGV_FundamentosFinal/Framework/src/: frameworkManager.cpp
EDGV_FundamentosFinal/Framework/src/platform/: dllDynamics.cpp  iofile.cpp  math.cpp
EDGV_FundamentosFinal/Framework/src/platform/math/: matrix3.cpp
EDGV_FundamentosFinal/Framework/src/scene/: actor.cpp  component.cpp  scene.cpp  sceneManager.cpp
EDGV_FundamentosFinal/Framework/src/scene/components/: button.cpp  transform.cpp
EDGV_FundamentosFinal/Framework/src/tools/: font.cpp  fontManager.cpp  input.cpp  math.cpp  texture.cpp  textureManager.cpp  time.cpp
EDGV_FundamentosFinal/NewMapMod/: CMakeLists.txt
EDGV_FundamentosFinal/NewMapMod/include/: mapManager.h  newMapManager.h  newMapModDefines.h
EDGV_FundamentosFinal/NewMapMod/src/: main.cpp  newMapManager.cpp
EDGV_FundamentosFinal/Pong/: CMakeLists.txt
EDGV_FundamentosFinal/Pong/include/: pongDefines.h  pongFramework.h
EDGV_FundamentosFinal/Pong/include/scripts/: blinky.h  clyde.h  gameManager.h  gameMap.h  inky.h  mapBuilder.h  mapManager.h  mapTilesFactory.h  movementScript.h  movingEntity.h  phantom.h  pinky.h  player.h  powerCoin.h
EDGV_FundamentosFinal/Pong/include/scripts/mapEntities/: coin.h  collectable.h
EDGV_FundamentosFinal/Pong/include/scripts/mapEntities/collectables/: coin.h  powerCoin.h
EDGV_FundamentosFinal/Pong/include/scripts/mapEntities/moving/: movingEntity.h  phantom.h  player.h
EDGV_FundamentosFinal/Pong/include/scripts/mapEntities/moving/phantoms/: blinky.h  clyde.h  inky.h  pinky.h
EDGV_FundamentosFinal/Pong/include/scripts/statesPattern/: state.h  stateMachine.h
EDGV_FundamentosFinal/Pong/include/scripts/statesPattern/states/: stateGameOver.h  stateGamePaused.h  stateGamePlaying.h  stateGameStarting.h  stateGameWon.h  stateLoadGame.h  stateMainMenu.h  stateSaveGame.h
EDGV_FundamentosFinal/Pong/resources/: baseMap.map
EDGV_FundamentosFinal/Pong/src/: main.cpp  pongFramework.cpp
EDGV_FundamentosFinal/Pong/src/scripts/: coin.cpp  gameManager.cpp  gameMap.cpp  mapBuilder.cpp  mapManager.cpp  mapTilesFactory.cpp  movementScript.cpp  movingEntity.cpp  phantom.cpp  player.cpp  powerCoin.cpp
EDGV_FundamentosFinal/Pong/src/scripts/mapEntities/: coin.cpp  collectable.cpp  powerCoin.cpp
EDGV_FundamentosFinal/Pong/src/scripts/mapEntities/collectables/: coin.cpp  powerCoin.cpp
EDGV_FundamentosFinal/Pong/src/scripts/mapEntities/moving/: movingEntity.cpp  phantom.cpp  player.cpp
EDGV_FundamentosFinal/Pong/src/scripts/mapEntities/moving/phantoms/: blinky.cpp  clyde.cpp  inky.cpp  pinky.cpp
EDGV_FundamentosFinal/Pong/src/scripts/statesPattern/: stateMachine.cpp
EDGV_FundamentosFinal/Pong/src/scripts/statesPattern/states/: stateGameOver.cpp  stateGamePaused.cpp  stateGamePlaying.cpp  stateGameStarting.cpp  stateGameWon.cpp  stateLoadGame.cpp  stateMainMenu.cpp  stateSaveGame.cpp
EDGV_FundamentosFinal/SpeedMod/: CMakeLists.txt
EDGV_FundamentosFinal/SpeedMod/src/: main.cpp
EDGV_FundamentosFinal/mods/NewMapMod/resources/: newMap.map
EDGV_FundamentosFinal/saves/: saveFile.pac
